# WheelSpeedSensor

CAN_Receive_v1/: CAN_Receive_v1.ino
PWM_ledc_1/: PWM_ledc_1.ino
PulseTrain/: PulseTrain.ino  Wheel.cpp  Wheel.h
WSS_SPA3/: CMakeLists.txt  README.md
WSS_SPA3/components/driver/rmt/: rmt_tx.c
WSS_SPA3/components/driver/rmt/include/driver/: rmt_tx.h
WSS_SPA3/main/: CMakeLists.txt  data_encoder.c  data_encoder.h  pulse_encoder.c  pulse_encoder.h  wheels.h  wss_main.c
WSS_v2/: CMakeLists.txt  sdkconfig
WSS_v2/components/ACAN2517FD/: CMakeLists.txt
WSS_v2/main/: CMakeLists.txt  ir_nec_encoder.c  ir_nec_encoder.h  main.cpp
src/main/: ACAN2517FD_with_ESP32_LoopBackDemoPinout.xlsx  Setup&InitialIssues.txt  Setup.txt  main.ino
